# himark

./: .gitignore  README.md  pyproject.toml
docs/: ALGEBRA.md  ENGINE.md  GRAMMAR.g4  GRAMMAR.md  HMK.html  HMK.md  IN_BRIEF.md  MKY.md  PAYLOAD.md  TODO  TODO.md
editors/vscode/: README.md  package.json  vscode
editors/vscode/syntaxes/: hmk.tmLanguage.json
gui/: README.md  bridge.py  highlight.hmk  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
gui/src/: App.tsx  api.ts  defaults.ts  highlight.ts  hmk.ts  main.tsx  storage.ts  styles.css  types.ts
gui/src/components/: ExpressionSidebar.tsx  FindResults.tsx  HighlightedExpression.tsx  HighlightedInput.tsx  SaveLoadMenu.tsx  SavedItemsMenu.tsx  TestStringTabs.tsx
gui/src/hooks/: useTabs.ts
himark/: __main__.py  cli.py  engine.py  main.py  node.py  prelude.py  server.py  std.hmk  temp.py
himark/engine/: __init__.py  _anchors.py  _compile.py  _match.py  _render.py  _run.py  _runner.py  _types.py  _vm.py  alphabet.py  runtime.py
himark/engine/backend/: __init__.py  _compile.py  _compiler.py  _run.py  _translate.py  _types.py  _vm.py  alphabet.py  interface.py  python.py  rust.py
himark/models/: alphabet.py  compiled.py  cst_view.py  exceptions.py  nodes_typed.py  opcodes.py
himark/parser/: __init__.py  _builder.py  _compiler.py  _count.py  _expr.py  _helpers.py  _script.py  _shape.py  _text.py  interface.py  macros.py  macros.toml  phase0.py  phase1.py  phase2.py  phase3.py  python.py  regenerate.py  rewrites.py  rust.py
himark/parser_antlr/: __init__.py  regenerate.py
himark/scripts/: bench_report.hmk  btc_extract.hmk  bubble_sort.hmk  dedup.hmk  fmt.hmk  format_hmk.hmk  format_html.hmk  format_md.hmk  hmk_format.hmk  html_format.hmk  html_indent.hmk  md_format.hmk  md_html.hmk
himark/tools/: precompiled.py  query.py  transpiler.py
himark/utils/: __init__.py  alphabet.py  emoji.py  latex.py  resolver.py  varied_rep.py
marky/: __main__.py  macros.py  macros.toml  main.py  server.py
marky/engine/: __init__.py  _compile.py  _match.py  _render.py  _run.py  _types.py  alphabet.py  backend.py  interface.py
marky/models/: node.py  nodes_adapter.py  nodes_typed.py
marky/parser/: __init__.py  _text.py  macros.toml  phase0.py  phase1.py  phase2.py  phase3.py  rewrites.py  templates.py
marky/scripts/: fmt.hmk  md_html.hmk
marky/tools/: markdown_transpiler.py  precompiled.py  query.py  transpiler.py
marky/utils/: __init__.py  alphabet.py  emoji.py  latex.py  resolver.py  varied_rep.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs  matcher.rs  program.rs
rust/src/parser/: count.rs  mod.rs  nodes.rs  phase0.rs  phase1.rs  phase2.rs  phase3.rs  shape.rs  text.rs
sandbox/: engine.cpp  engine.go  engine.java  engine.py  stub.py
sandbox/rust/: Cargo.toml
sandbox/rust/src/: main.rs  matchers.rs  pipeline.rs  template.rs  types.rs  vm.rs
tests/: conftest.py  test_alphabet.py  test_anchors.py  test_blind.py  test_btc_extract.py  test_capture_groups.py  test_doc_sync.py  test_engine.py  test_filters.py  test_fmt.py  test_golden.py  test_grammar_acceptance.py  test_html_indent.py  test_imports.py  test_integration.py  test_lint.py  test_match.py  test_md_html.py  test_node_adapters.py  test_nodes_typed.py  test_operators.py  test_parser_golden.py  test_parser_parity.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase2_tokenization.py  test_phase3.py  test_precompiled.py  test_prelude.py  test_resolver.py  test_rust_backend.py  test_rust_parser.py  test_script_defs.py  test_tokenization.py  test_v093_features.py  test_varied_rep.py
tests/bench/: bench.py
tests/benchmarks/: bench.py
tests/demos/: test_bench_report.py  test_btc_extract.py  test_bubble_sort.py  test_dedup.py  test_fmt.py  test_hmk_format.py  test_html_format.py  test_html_indent.py  test_md_format.py  test_md_html.py
tests/demos/resources/: addresses.txt  bench_results.json  messy.md  numbers.txt  podcasts.csv  sample.hmk  sample.html  sample.md
tests/golden/: matcher.json
tests/golden/parser_ast/: patterns.json  scripts.json
tests/golden/pipelines/: btc_extract.out  bubble_sort.out  dedup.out  fmt.out  hmk_format.out  html_format.out  md_format.out  md_html.out
tests/north_star/: commonmark.md  test_bitcoin.py  test_crypto.py  test_ipv4.py  test_markdown.py  test_transpile.py
tools/: inspect_parse.py  run_pattern.py
