[project]
name = "himark"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = ["typer>=0.9", "pydantic (>=2.13.4,<3.0.0)"]

[project.optional-dependencies]
# antlr4 runtime version must match the tool jar used by
# himark/parser_antlr/regenerate.py (the parser-migration slice).
test = ["pytest>=7.0", "hypothesis>=6.50", "pytest-cov", "antlr4-python3-runtime==4.13.2"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

# Architecture guard: a strict layering. Higher layers may import lower ones;
# the two middle siblings (parser, engine) are independent and may not import
# each other — they communicate only through the `models` AST. `macros` lives
# inside `parser` (it is parser-only preprocessing), so it needs no own entry.
[tool.importlinter]
root_package = "himark"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Layered architecture (main > tools > {parser, engine} > models)"
type = "layers"
layers = [
    "himark.main",
    "himark.tools",
    "himark.parser | himark.engine",
    "himark.models",
]
exhaustive = false


[project.scripts]
himark = "himark.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "ty (>=0.0.44,<0.0.45)",
    "pytest (>=9.0.3,<10.0.0)",
    "hypothesis (>=6.155.2,<7.0.0)",
    "vulture (>=2.16,<3.0)",
    "import-linter (>=2.0,<3.0)",
    "antlr4-python3-runtime (==4.13.2)",
]
