[package]
name = "himark_rs"
version = "0.1.0"
edition = "2021"
description = "Native (Rust) matching backend for the himark/engine seam — the structural subset."

[lib]
name = "himark_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
